# jsonata-rs

./: Cargo.toml  readme.md
error/: Cargo.toml
examples/: demo.rs  jsonata.rs
jsonata/: Cargo.toml
jsonata/examples/: jsonata.rs  serdetest.rs  test.rs
jsonata/src/: data.rs  environment.rs  evaluate.rs  lib.rs
modules/error/src/: lib.rs
modules/expression/: Cargo.toml
modules/expression/src/: lib.rs
modules/parser/: Cargo.toml
modules/parser/src/: lex.rs  lib.rs  parse.rs  token.rs
parser/: Cargo.toml
parser/src/: error.rs  lex.rs  lib.rs  parse.rs
src/: error.rs  evaluate.rs  lex.rs  lexer.rs  lib.rs  parse.rs
