[workspace]
members = [ 
  "jsonata",
  "modules/parser",
  "modules/error",
  "modules/expression",
]

resolver = "2"

[workspace.dependencies]
jsonata-parser = { path = "modules/parser" }
jsonata-error = { path = "modules/error" }
jsonata-expression = { path = "modules/expression" }

[workspace.package]
version = "0.1.0"

[workspace.lints.clippy]
